# nflsurvivor

./: pyproject.toml  streamlit_app.py
nflsurvivor/auth/: authenticate.py
nflsurvivor/db/: cockroach.py  supabase.py
nflsurvivor/models/: hero.py
tests/: test_nflsurvivor.py
